--- a/vagrant/catalog/templates/catalog.html
+++ b/vagrant/catalog/templates/catalog.html
@@ -1,27 +1,69 @@
 <html>
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
+	<div class="row divider green">
+		<div class="col-md-12"></div>
+	</div>
+	<div class="row banner menu">
+		<div class="col-md-11 col-md-offset-1 padding-none">
+			<h1>{{ sport.name }}
+			<!--<figure class="creator">
+				<img src="{{ url_for('static', filename='blank_user.gif') }}">
+				<figcaption>Menu creator's name goes here</figcaption>
+			</figure>-->
+			</h1>
+		</div>
+	</div>
 
-<body>
+<div class = 'flash'>
+	{% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li> <strong> {{ message }} </strong> </li>
+    		    {% endfor %}
+    	    </ul>
+        {% endif %}
+    {% endwith %}
 
-<h1> Show Catalog Item for {{sport.name}}</h1>
-
-<a href="{{url_for('editSport', sport_id = sport.id )}}">Edit Sport</a>
-<a href="{{url_for('newItem', sport_id = sport.id )}}">Add Item</a>
-
-{% for i in items %}
-
-<div>
-	<p>{{i.name}}</p>
-	<p>{{i.description}}</p>
-
-
-<a href="{{url_for('editItem', sport_id = sport.id, catalog_id=i.id)}}">Edit Catalog Item</a>
-</br>
-<a href="{{url_for('deleteItem', sport_id = sport.id, catalog_id=i.id )}}">Delete Catalog Item</a>
-
-</br>
 </div>
+	<div class="row padding-top padding-bottom">
+		<div class="col-md-1"></div>
+		<div class="col-md-11 padding-none">
+			<a href="{{url_for('editSport', sport_id = sport.id )}}">
+				<button class="btn btn-default" id="new-catalog-item">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Sport
+				</button>
+			</a>
+			<a href="{{url_for('newItem', sport_id = sport.id )}}">
+				<button class="btn btn-default" id="new-menu-item">
+					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Add Catalog Item
+				</button>
+			</a>
+						<a href="{{url_for('deleteSport', sport_id = sport.id )}}">
+				<button class="btn btn-default delete" id="delete-sport">
+					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Sport
+				</button>
+			</a>
+		</div>
+		<div class="col-md-7"></div>
+	</div>
 
-{% endfor %}
-
-</body>
-</html>
+	{% if items !=[] %}
+		<div class="row">
+			<div class="col-md-1"></div>
+			<div class="col-md-3">
+				<h2>Catalog Items</h2>
+				{% for i in items %}
+					<div class="catalog-item">
+						<h3>{{i.name}}</h3>
+						<p>{{i.description}}</p>
+						<a href='{{url_for('editItem', sport_id = sport.id, catalog_id=i.id ) }}'>Edit Item</a>
+						<a href='{{url_for('deleteItem', sport_id = sport.id, catalog_id=i.id ) }}'>Delete Item</a>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+	{% endif %}
+{% endblock %}
