--- a/vagrant/catalog/templates/displayCatalog.html
+++ b/vagrant/catalog/templates/displayCatalog.html
@@ -87,3 +87,137 @@
 
 </body>
 </html>
+---
+
+
+<!--
+<form action="{{url_for('showCatalog',sport_id=sport_id)}}" method = 'POST'>
+
+<p>Name:</p>
+<input type='text' size='30' name='name' placeholder='{{items.name}}'>
+
+<p>Description:</p>
+<input type='text' size='30' name='description' placeholder='{{items.description}}'>
+
+<input type='submit' value='Edit'>
+
+<a href='{{url_for('showCatalog', sport_id = sport_id)}}'>Cancel</a>
+
+</form>
+-->
+
+</body>
+</html>
+
+
+<!--
+<html>
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
+	<div class="row divider green">
+		<div class="col-md-12"></div>
+	</div>
+	<div class="row banner menu">
+		<div class="col-md-11 col-md-offset-1 padding-none">
+			<h1>{{ sport.name }}
+			<figure class="creator">
+				<img src="{{ url_for('static', filename='blank_user.gif') }}">
+				<figcaption>Menu creator's name goes here</figcaption>
+			</figure>
+			</h1>
+		</div>
+	</div>
+
+<div class = 'flash'>
+		      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+
+        <ul>
+        {% for message in messages %}
+            <li> <strong> {{ message }} </strong> </li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+    {% endwith %}
+
+</div>
+	<div class="row padding-top padding-bottom">
+		<div class="col-md-1"></div>
+		<div class="col-md-11 padding-none">
+			<a href="{{url_for('editSport', sport_id = sport.id )}}">
+				<button class="btn btn-default" id="new-catalog-item">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Sport
+				</button>
+			</a>
+			<a href="{{url_for('newItem', sport_id = sport.id )}}">
+				<button class="btn btn-default" id="new-menu-item">
+					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Add Catalog Item
+				</button>
+			</a>
+						<a href="{{url_for('deleteSport', sport_id = sport.id )}}">
+				<button class="btn btn-default delete" id="delete-sport">
+					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Sport
+				</button>
+			</a>
+		</div>
+		<div class="col-md-7"></div>
+	</div>
+
+	{% if items !=[] %}
+		<div class="row">
+			<div class="col-md-1"></div>
+			<div class="col-md-3">
+				<h2>Catalog Items</h2>
+					{% for i in items %}
+						<div class="catalog-item">
+							<h3>{{i.name}}</h3>
+							<p>{{i.description}}</p>
+							<a href='{{url_for('editItem', sport_id = sport.id, catalog_id=i.id ) }}'>Edit Item</a> |
+							<a href='{{url_for('deleteItem', sport_id = sport.id, catalog_id=i.id ) }}'>Delete Item</a>
+						</div>
+					{% endfor %}
+			</div>
+	{% endif %}
+{% endblock %}
+-->
+
+<!---
+			{% for i in items %}
+						<div class="catalog-item">
+							<h3>{{i.name}}</h3>
+							<p>{{i.description}}</p>
+							<a href='{{url_for('editItem', sport_id = sport.id, catalog_id=i.id ) }}'>Edit Item</a> |
+							<a href='{{url_for('deleteItem', sport_id = sport.id, catalog_id=i.id ) }}'>Delete Item</a>
+						</div>
+-->
+
+<!--
+<a href="{{url_for('editItem', sport_id = sport.id, catalog_id=i.id)}}">Edit Catalog Item</a>
+<a href="{{url_for('deleteItem', sport_id = sport.id, catalog_id=i.id )}}">Delete Catalog Item</a>
+-->
+
+<!--
+	<div class="row padding-top padding-bottom">
+		<div class="col-md-1"></div>
+		<div class="col-md-11 padding-none">
+			<a href="{{url_for('editSport', sport_id = sport.id )}}">
+				<button class="btn btn-default" id="new-catalog-item">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Sport
+				</button>
+			</a>
+		</div>
+		<div class="col-md-7"></div>
+	</div>
+-->
+
+	<a href="{{url_for('editItem', sport_id = sport.id )}}">
+		<button class="btn btn-default" id="new-menu-item">
+			<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Edit Catalog Item
+		</button>
+	</a>
+	<a href="{{url_for('deleteItem', sport_id = sport.id )}}">
+		<button class="btn btn-default delete" id="delete-sport">
+			<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Sport
+		</button>
+	</a>
