--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -14,12 +14,12 @@
 </head>
 
 
-<body>  
+<body>
 
 
 <!-- GOOGLE PLUS SIGN IN BUTTON-->
 
-          
+
           <div id="signinButton">
           <span class="g-signin"
             data-scope="openid email"
@@ -51,16 +51,16 @@ function signInCallback(authResult) {
         if (result) {
           $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
          setTimeout(function() {
-          window.location.href = "/restaurant";
+          window.location.href = "/sports";
          }, 4000);
-          
+
       } else if (authResult['error']) {
     console.log('There was an error: ' + authResult['error']);
   } else {
         $('#result').html('Failed to make a server-side call. Check your configuration and console.');
          }
       }
-      
+
   }); } }
 </script>
 
