--- a/vagrant/catalog/templates/editSport.html
+++ b/vagrant/catalog/templates/editSport.html
@@ -6,7 +6,7 @@
 
 <form action='{{url_for('editSport', sport_id=sport.id)}}' method = 'POST'>
 <p>Name:</p>
-<input type='text' size='30' name='name' placeholder='{{sport.name}}'>
+<input type='text' size='30' name='name' placeholder='{{sport.name}}' required minlength="2">
 
 <input type='submit' value='Edit'>
 
