--- a/vagrant/catalog/templates/newItem.html
+++ b/vagrant/catalog/templates/newItem.html
@@ -6,10 +6,10 @@
 
 <form action="{{url_for('newItem',sport_id=sport_id)}}" method = 'POST'>
 <p>Name:</p>
-<input type="text" size='30' name="name">
+<input type="text" size='30' name="name" required minlength="2">
 
 <p>Description:</p>
-<input type="text" size='30' name="description">
+<input type="text" size='30' name="description" required minlength="10">
 <input type="submit" value="Create">
 
 </form>
