--- a/vagrant/catalog/templates/newSport.html
+++ b/vagrant/catalog/templates/newSport.html
@@ -6,7 +6,7 @@
 
 <form action="{{url_for('newSport')}}" method = 'POST'>
 <p>Name:</p>
-<input type="text" size='30' name="name">
+<input type="text" size='30' name="name" required minlength="2">
 <input type='submit' value='Add'>
 </form>
 
